--- a/d32.html
+++ b/d32.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="d3/d3.v2.js"></script>
     
   <style>
-    #vis { background: steelblue; }
+    #vis { background: black; }
   </style>
 
   </head>
@@ -49,7 +49,7 @@
         .attr("cx", x)
         .attr("cy", y)
         .attr("r", val)
-        .attr("stroke", "gray")
+        .attr("stroke", "white")
         .attr("fill", color);
 
     </script>
